# learning-ml-rl

./: .gitignore  out1.txt  pyproject.toml  readme.md  temp.ipynb
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
.obsidian/snippets/: bolder_bold.css  calloututil.css  imgutils.css  tableutils.css
2802ict-assignments/assignment_01/: Report.docx  repomix-output.xml  ~$Report.docx
2802ict-assignments/assignment_02/: Jupyter Screenshots.docx  Report.docx  Roman_Green_s5369389_A2_report.pdf:com.dropbox.attrs  Submission Bundle.zip:com.dropbox.attrs  eval.ipynb  testing.ipynb  ~$Report.docx  ~$pyter Screenshots.docx
2802ict-notes/: Notes (temp).md  Notes.md  notes.md
2802ict-notes/exercises/: home_exercises_1_attempt.md
2802ict-notes/lab 01/: maze.py  roman_maze.py
2802ict-notes/lab 03/: Scratchpad.md
d2l-notes/: 02.05.py  02.py
d2l-notes/02 prelim/: 01 introduction.md  02 prelim.md
d2l-notes/03 lin regression/: 01 lin regression.md  0101 lin regression.md  02 basic_wandb.py  03 basic_flax.py  06 lin_reg_concise_checkpointing.py  07 lin_reg_concise_func_training_loop_trainstate.py  07 lin_reg_concise_ridge_regression_concise.py  08 generalisation.md  read_later.md
d2l-notes/04 classification/: 01 softmax.md  03 softmax_scratch.py  04 softmax_concise.py
d2l-notes/05 mlp/: 04 mlp_concise.py  05 numerical stability and initialisation.md
deep-learning-notes/: Lecture 01.md  multi_head_attention.ipynb  simple_notes.md  wk1-4_basics.md  wk5_modern_nns.md
deep-learning-notes/assignment_01/: saves.md  (+9 more)
notes/: 02.2.py  deleteme.py
rl-notes/: ex2.5.ipynb
(+116 files in other folders)
